# NIDS-CNN-AE

./: .gitignore  cnn-ae-tf.py  cnn-ae-torch.py  cnn_from_kaggle.py  configs.py  data_loader.py  loop_exp.py  main.py  models.py  pyproject.toml  training_logic.py  utils.py
